--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Tanya Jain",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
