--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "Tanya Jain",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "node-sass": "^4.13.1",
